--- a/blogr-landing-page-main/css/style.css
+++ b/blogr-landing-page-main/css/style.css
@@ -59,12 +59,13 @@ img {
   background: white;
   top: 14%;
   bottom: 0;
-  transform: translateX(10%);
+  left: 20%;
+  right: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   gap: 1em;
-  height: 100%;
+  min-height: 500px;
   max-width: 300px;
   width: 100%;
   z-index: 99;
@@ -72,6 +73,7 @@ img {
   text-align: center;
   padding: 1.5em 1em;
   box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
+  z-index: 9999;
 }
 .header .list .list__link {
   font-family: "Overpass", sans-serif;
@@ -135,6 +137,8 @@ img {
   display: flex;
   justify-content: center;
   gap: 20px;
+}
+.header .showcase .showcase__btn__container .showcase__btn {
   color: #ff3d54;
   font-weight: 700;
   font-size: 1.1rem;
@@ -143,7 +147,7 @@ img {
   border-radius: 2em;
   min-width: 150px;
 }
-.header .showcase .light {
+.header .showcase .showcase__btn__container .light {
   background: transparent;
   color: white;
   outline: 2px solid white;
