--- a/blogr-landing-page-main/css/style.scss
+++ b/blogr-landing-page-main/css/style.scss
@@ -5,56 +5,43 @@
 
 
 .header{
-    background-color: $Lightred;
-    background-size:contain;
+    background-color:$Lightred;
     position: relative;
     z-index:2;
     padding:1em;
-    // &::before{
-    //     content:'';
-    //     position:absolute;
-    //     background-image: url('../images/bg-pattern-intro-mobile.svg');
-    //     inset:0;
-    //     background-size:contain;
-    //     transform:translate(0,50%);
-    //     width:200%;
-    //     height:100%;
-    // } 
-    // @include showcase__btn;
+    background-image: url('../images/bg-pattern-intro-mobile.svg');
+    background-size: 200%;
+    background-position: center 60%;
     border-bottom-left-radius:20%;
 
-    .pattern{
-        overflow:hidden;
-        position: absolute;
-        transform:translate(30%,5%)scale(4,4);
-        inset:0;
-        z-index:-1;
-        object-fit:cover;
-       
-      
-
-    }
 
     .nav__bar{
         display:flex;
         justify-content:space-between;
         align-items:flex-start;
+        margin-top:1em;
        
        
     }
+    .logo__img{
+       min-width:100px;
+    }
  
     .list{
+        display: none;
         position:absolute;
         background:$White_Text;
         top:14%;
-        bottom:0;
-        left:20%;
-        right:20%;
-        display:flex;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        text-align: center;
         flex-direction: column;
-        justify-content:space-evenly;
-        gap:1em;
-        min-height:500px;
+        justify-content:space-around;
+        // align-items: center;
+        gap:1.5em;
+        height:auto;
         max-width:300px;
         width:100%;
         z-index:99;
@@ -63,11 +50,33 @@
         padding:1.5em 1em;
         box-shadow:$boxShadow;
         z-index:9999;
+        @include mq(799px){
+             min-height: unset;
+             max-width: unset;
+             position: static;
+             display: flex !important;
+             flex-direction:row;
+             background: initial;
+             box-shadow: none;
+             padding:0;
+             margin:0 0 0 1em;
+             align-items: center;
+        }
+        .list__item{
+            position: relative;
+            text-align: center;
+        }
         .list__link{
             font-family:$ff_Sub;
             font-weight:600;
             color:$Very_dark_blue_headings;
             font-size:1.1rem;
+            padding:.8em 0.2em;
+
+            @include mq(799px){
+              color:$White_Text;
+           
+           }
 
         }
      
@@ -79,36 +88,109 @@
              padding:.8em 2.2em;
              border-radius:1.4em;
              display:inline-block;
-             min-width:100px;
+             min-width:120px;
              margin-top:.5em;
+             transition: all 250ms ease-in;
+             @include mq(799px){
+                color:$Lightred;
+                background: $White_Text;
+                &:hover{
+                    color:$White_Text;
+                    background:$Verylightred_CTA_hover_background;
+                 }
+             }
              
         }
 
         .bar{
-            padding:0.05em 0 0 0em;
+            padding:0.05em 0 0.05em 0em;
             max-width:270px;
             background:#ccc;
+            @include mq(799px){
+                margin-left: auto;
+                opacity:0;
+             }
         }
 
     }
+
+  
    
     .sub__list{
        background:#f5f5f6;
-       padding:1em;
-       margin:1em;
+       padding:1em 1em 1em 0;
+       margin:1em 0 0 0 ;
        font-family:$ff_Sub;
        opacity:0.8;
+       display: none;
+     
+       @include mq(799px){
+       display: none;
+        position: absolute;
+        text-align: start;
+        top:1em;
+        left:-1em;
+        opacity:1;
+        border-radius:0.3em;
+        // font-size:10px;
+        padding: 1em  4em  0 1em;
+        font-weight: 300;
+
+        a{  
+            color:#000 !important;
+            font-size:1rem;
+            font-weight:500;
+            margin-bottom:0.3em;
+        }
+       }
+
        &>*{
           margin-bottom:1.2em; 
        }
-       a{  
-           color:$Very_dark_blue_headings;
-           font-size:1rem;
-           font-weight:700;
-       }
+    
  
 
     }
+    .sub__link{
+        a{
+            color:$Verydarkdesaturatedblue;
+            font-weight: 600;
+        }
+        &:hover .sub__list{
+            display: block !important;
+            
+        }
+        &:hover img{
+            transform: rotate(180deg);
+             
+         }
+        @include mq(799px){
+            a{
+                font-weight:400;
+            }
+            img{
+                transition: transform 100ms ease-out;
+                
+            }
+            &:hover .sub__list{
+                display: block !important;
+                
+            }
+            &:hover img{
+                transform: rotate(180deg);
+                 
+             }
+             &:hover{
+    
+                 text-decoration: underline solid $White_Text 3px;
+             }
+             a:hover{
+                 font-weight: 700;
+             }
+        }
+
+    }
+    
 
 
     .hamburger__menu{
@@ -117,6 +199,9 @@
             border:0;
             margin-top:0.4em;
             cursor: pointer;
+        }
+        @include mq(799px){
+            display: none;
         }
     }
     .showcase{
@@ -147,16 +232,172 @@
                 padding:1em 0.75em;
                 border-radius:2em;
                 min-width:150px;
+                transition:all 250ms ease-in;
+                &:hover{
+                    color:$White_Text;
+                    background:$Verylightred_CTA_hover_background;
+                 }
+                 
             }
 
             .light{
                 background:transparent;
                 color:$White_Text;
                 outline:2px solid $White_Text;
+                &:hover{
+                    color:$Lightred;
+                    background: $White_Text;
+                 }
             }
          
         }
    
     
+    }
+}
+
+
+.first__section{
+    margin:3em 0;
+    .title{
+        text-align:center;
+        font-family:$ff_Main;
+        color:$Very_dark_blue_headings;
+        margin-bottom:1.3em;
+        font-weight:500;
+    }
+    .row{
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        // gap:10px;
+    }
+    .col:last-child{
+        order:-1;
+    }
+
+    .para__title{
+         text-align:center;
+         color:$Very_dark_blue_headings;
+         font-family:$ff_Sub;
+         word-wrap: break-word;
+         font-size:1.3rem;
+    }
+    .para{
+        text-align:center;
+        font-family:$ff_Sub;
+        line-height:1.7;
+        color:$Verydarkdesaturatedblue;
+        font-weight:300;
+
+    }
+}
+
+.second__section{
+    background-color: $Verydarkgrayblue;
+    margin:5em 0;
+    border-bottom-left-radius:20%;
+    border-top-right-radius:20%;
+    background-repeat:  no-repeat;
+    background-size:130%; 
+    background-position: 50% -200%;
+    .row{
+       
+      
+        position: relative;
+     
+        display:flex;
+        
+        flex-direction: column;
+        padding:0.5em;
+    }
+    .col:first-child{
+        position:relative;
+        top:-8em;
+    }
+    .col:last-child{
+        position:relative;
+        top:-10em
+    }
+
+    .para__title{
+        text-align:center;
+        color:$White_Text;
+        font-family:$ff_Sub;
+        word-wrap: break-word;
+        font-size:2rem;
+   }
+
+   .para{
+    text-align:center;
+    font-family:$ff_Sub;
+    line-height:1.7;
+    color:$White_Text;
+    font-weight:300;
+    font-size:1.1rem;
+
+  }
+}
+
+
+.third__section{
+      margin:2em 0;  
+      padding:0.5em;
+      .row{
+          display:flex;
+          flex-direction:column;
+          align-items: center;
+      }
+    //   img{
+    //       display: block;
+    //       width:100%;
+    //       min-width:300px;
+    //   }
+      .col:first-child{
+          background-image: url('../images/illustration-laptop-mobile.svg');
+          flex-basis:20rem;
+          padding:1em;
+          background-size: cover;
+          background-position: center;
+          align-self: stretch;
+      }
+      .para__title{
+        text-align:center;
+        font-family:$ff_Sub;
+        line-height:1.7;
+        color:$Verydarkdesaturatedblue;
+        font-weight:700;
+        font-size: 1.6rem;
+      }
+      .para{
+        text-align:center;
+        font-family:$ff_Sub;
+        line-height:1.7;
+        color:$Verydarkdesaturatedblue;
+        font-weight:300; 
+      }
+}
+
+
+footer{
+    padding:2em 1em 1em 1em;
+    background-color:$Verydarkblackblue_footerbg ;
+    text-align:center;
+    border-top-right-radius: 20%;
+    color:$White_Text;
+    .grid{
+        margin-top:1em;
+    }
+
+    h4{
+        font-family:$ff_Main;
+        font-size:1.2rem;
+    }
+    li{
+        margin-bottom:0.3em;
+        font-size:1.1rem;
+        color:$Grayishblue_Footer;
+        font-family:$ff_Sub;
+        font-weight: 400;
     }
 }
