--- a/blogr-landing-page-main/css/mixin.scss
+++ b/blogr-landing-page-main/css/mixin.scss
@@ -7,3 +7,9 @@
     border-radius:2em;
     min-width:150px;
  }
+
+ @mixin  mq($arg) {
+       @media screen and (min-width:$arg) {
+           @content; 
+       }
+ }
