--- a/blogr-landing-page-main/css/style.css
+++ b/blogr-landing-page-main/css/style.css
@@ -34,38 +34,37 @@ img {
 
 .header {
   background-color: #ff3d54;
-  background-size: contain;
   position: relative;
   z-index: 2;
   padding: 1em;
+  background-image: url("../images/bg-pattern-intro-mobile.svg");
+  background-size: 200%;
+  background-position: center 60%;
   border-bottom-left-radius: 20%;
-}
-.header .pattern {
-  overflow: hidden;
-  position: absolute;
-  transform: translate(30%, 5%) scale(4, 4);
-  inset: 0;
-  z-index: -1;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 .header .nav__bar {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  margin-top: 1em;
+}
+.header .logo__img {
+  min-width: 100px;
 }
 .header .list {
+  display: none;
   position: absolute;
   background: white;
   top: 14%;
-  bottom: 0;
-  left: 20%;
-  right: 20%;
-  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
   flex-direction: column;
-  justify-content: space-evenly;
-  gap: 1em;
-  min-height: 500px;
+  justify-content: space-around;
+  gap: 1.5em;
+  height: auto;
   max-width: 300px;
   width: 100%;
   z-index: 99;
@@ -75,11 +74,35 @@ img {
   box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
   z-index: 9999;
 }
+@media screen and (min-width: 799px) {
+  .header .list {
+    min-height: unset;
+    max-width: unset;
+    position: static;
+    display: flex !important;
+    flex-direction: row;
+    background: initial;
+    box-shadow: none;
+    padding: 0;
+    margin: 0 0 0 1em;
+    align-items: center;
+  }
+}
+.header .list .list__item {
+  position: relative;
+  text-align: center;
+}
 .header .list .list__link {
   font-family: "Overpass", sans-serif;
   font-weight: 600;
   color: #1f3f5b;
   font-size: 1.1rem;
+  padding: 0.8em 0.2em;
+}
+@media screen and (min-width: 799px) {
+  .header .list .list__link {
+    color: white;
+  }
 }
 .header .list .sign__up {
   background-image: linear-gradient(to right, #ff8f70, #ff3d54);
@@ -89,34 +112,102 @@ img {
   padding: 0.8em 2.2em;
   border-radius: 1.4em;
   display: inline-block;
-  min-width: 100px;
+  min-width: 120px;
   margin-top: 0.5em;
+  transition: all 250ms ease-in;
+}
+@media screen and (min-width: 799px) {
+  .header .list .sign__up {
+    color: #ff3d54;
+    background: white;
+  }
+  .header .list .sign__up:hover {
+    color: white;
+    background: #ff7a85;
+  }
 }
 .header .list .bar {
-  padding: 0.05em 0 0 0em;
+  padding: 0.05em 0 0.05em 0em;
   max-width: 270px;
   background: #ccc;
 }
+@media screen and (min-width: 799px) {
+  .header .list .bar {
+    margin-left: auto;
+    opacity: 0;
+  }
+}
 .header .sub__list {
   background: #f5f5f6;
-  padding: 1em;
-  margin: 1em;
+  padding: 1em 1em 1em 0;
+  margin: 1em 0 0 0;
   font-family: "Overpass", sans-serif;
   opacity: 0.8;
+  display: none;
+}
+@media screen and (min-width: 799px) {
+  .header .sub__list {
+    display: none;
+    position: absolute;
+    text-align: start;
+    top: 1em;
+    left: -1em;
+    opacity: 1;
+    border-radius: 0.3em;
+    padding: 1em 4em 0 1em;
+    font-weight: 300;
+  }
+  .header .sub__list a {
+    color: #000 !important;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-bottom: 0.3em;
+  }
 }
 .header .sub__list > * {
   margin-bottom: 1.2em;
 }
-.header .sub__list a {
-  color: #1f3f5b;
-  font-size: 1rem;
-  font-weight: 700;
+.header .sub__link a {
+  color: #3f4164;
+  font-weight: 600;
+}
+.header .sub__link:hover .sub__list {
+  display: block !important;
+}
+.header .sub__link:hover img {
+  transform: rotate(180deg);
+}
+@media screen and (min-width: 799px) {
+  .header .sub__link a {
+    font-weight: 400;
+  }
+  .header .sub__link img {
+    transition: transform 100ms ease-out;
+  }
+  .header .sub__link:hover .sub__list {
+    display: block !important;
+  }
+  .header .sub__link:hover img {
+    transform: rotate(180deg);
+  }
+  .header .sub__link:hover {
+    -webkit-text-decoration: underline solid white 3px;
+            text-decoration: underline solid white 3px;
+  }
+  .header .sub__link a:hover {
+    font-weight: 700;
+  }
 }
 .header .hamburger__menu .toggle__btn {
   background: transparent;
   border: 0;
   margin-top: 0.4em;
   cursor: pointer;
+}
+@media screen and (min-width: 799px) {
+  .header .hamburger__menu {
+    display: none;
+  }
 }
 .header .showcase {
   padding: 3em 0;
@@ -146,9 +237,145 @@ img {
   padding: 1em 0.75em;
   border-radius: 2em;
   min-width: 150px;
+  transition: all 250ms ease-in;
+}
+.header .showcase .showcase__btn__container .showcase__btn:hover {
+  color: white;
+  background: #ff7a85;
 }
 .header .showcase .showcase__btn__container .light {
   background: transparent;
   color: white;
   outline: 2px solid white;
+}
+.header .showcase .showcase__btn__container .light:hover {
+  color: #ff3d54;
+  background: white;
+}
+
+.first__section {
+  margin: 3em 0;
+}
+.first__section .title {
+  text-align: center;
+  font-family: "Ubuntu", sans-serif;
+  color: #1f3f5b;
+  margin-bottom: 1.3em;
+  font-weight: 500;
+}
+.first__section .row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.first__section .col:last-child {
+  order: -1;
+}
+.first__section .para__title {
+  text-align: center;
+  color: #1f3f5b;
+  font-family: "Overpass", sans-serif;
+  word-wrap: break-word;
+  font-size: 1.3rem;
+}
+.first__section .para {
+  text-align: center;
+  font-family: "Overpass", sans-serif;
+  line-height: 1.7;
+  color: #3f4164;
+  font-weight: 300;
+}
+
+.second__section {
+  background-color: #2c2d3f;
+  margin: 5em 0;
+  border-bottom-left-radius: 20%;
+  border-top-right-radius: 20%;
+  background-repeat: no-repeat;
+  background-size: 130%;
+  background-position: 50% -200%;
+}
+.second__section .row {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5em;
+}
+.second__section .col:first-child {
+  position: relative;
+  top: -8em;
+}
+.second__section .col:last-child {
+  position: relative;
+  top: -10em;
+}
+.second__section .para__title {
+  text-align: center;
+  color: white;
+  font-family: "Overpass", sans-serif;
+  word-wrap: break-word;
+  font-size: 2rem;
+}
+.second__section .para {
+  text-align: center;
+  font-family: "Overpass", sans-serif;
+  line-height: 1.7;
+  color: white;
+  font-weight: 300;
+  font-size: 1.1rem;
+}
+
+.third__section {
+  margin: 2em 0;
+  padding: 0.5em;
+}
+.third__section .row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.third__section .col:first-child {
+  background-image: url("../images/illustration-laptop-mobile.svg");
+  flex-basis: 20rem;
+  padding: 1em;
+  background-size: cover;
+  background-position: center;
+  align-self: stretch;
+}
+.third__section .para__title {
+  text-align: center;
+  font-family: "Overpass", sans-serif;
+  line-height: 1.7;
+  color: #3f4164;
+  font-weight: 700;
+  font-size: 1.6rem;
+}
+.third__section .para {
+  text-align: center;
+  font-family: "Overpass", sans-serif;
+  line-height: 1.7;
+  color: #3f4164;
+  font-weight: 300;
+}
+
+footer {
+  padding: 2em 1em 1em 1em;
+  background-color: #25252d;
+  text-align: center;
+  border-top-right-radius: 20%;
+  color: white;
+}
+footer .grid {
+  margin-top: 1em;
+}
+footer h4 {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.2rem;
+}
+footer li {
+  margin-bottom: 0.3em;
+  font-size: 1.1rem;
+  color: #c8c8cb;
+  font-family: "Overpass", sans-serif;
+  font-weight: 400;
 }/*# sourceMappingURL=style.css.map */
