--- a/blogr-landing-page-main/css/reset.scss
+++ b/blogr-landing-page-main/css/reset.scss
@@ -7,6 +7,7 @@ body{
     display:flex;
     flex-direction:column;
     margin:0;
+    
 
 }
 a{
@@ -24,8 +25,9 @@ img{
 }
 
 .container{
-    width:min(85%,1200px);
+    width:90%;
     margin:0 auto;
+    max-width:1200px;
     
 }
 // .toggler__on{
