--- a/blogr-landing-page-main/css/style.scss
+++ b/blogr-landing-page-main/css/style.scss
@@ -49,7 +49,7 @@
  
     .list{
         display: none;
-        position:absolute;
+        position:fixed;
         background:$White_Text;
         top:14%;
         margin-left: auto;
@@ -68,6 +68,14 @@
         padding:1.5em 1em;
         box-shadow:$boxShadow;
         z-index:9999;
+        // &::before{
+        //     content:'';
+        //     position: absolute;
+        //     inset:0;
+        //     background:rgba(0, 0, 0, 0.9);
+        //     z-index:-1;
+         
+        // }
         @include mq(799px){
              min-height: unset;
              max-width: unset;
@@ -79,6 +87,7 @@
              padding:0;
              margin:0 0 0 1em;
              align-items: center;
+            
         }
         .list__item{
             position: relative;
@@ -142,7 +151,7 @@
    
     .sub__list{
        background:#f5f5f6;
-       padding:1em 1em 1em 0;
+       padding:1em 1em 1em 1em;
        margin:1em 0 0 0 ;
        font-family:$ff_Sub;
        opacity:0.8;
@@ -249,6 +258,7 @@
             display:flex;
             justify-content:center;
             gap:20px;
+            flex-wrap:wrap;
 
             .showcase__btn{
                 color:$Lightred;
@@ -259,6 +269,7 @@
                 border-radius:2em;
                 min-width:150px;
                 transition:all 250ms ease-in;
+
                 &:hover{
                     color:$White_Text;
                     background:$Verylightred_CTA_hover_background;
