--- a/blogr-landing-page-main/css/mixin.scss
+++ b/blogr-landing-page-main/css/mixin.scss
@@ -13,3 +13,8 @@
            @content; 
        }
  }
+ @mixin  mqmax($arg) {
+    @media screen and (max-width:$arg) {
+        @content; 
+    }
+}
