--- a/blogr-landing-page-main/css/style.css
+++ b/blogr-landing-page-main/css/style.css
@@ -125,7 +125,7 @@ img {
     color: white;
   }
 }
-.header .list #arrow {
+.header .list .arrow {
   position: absolute;
   top: 1.2em;
   right: -0.3em;
@@ -440,14 +440,14 @@ img {
 }
 
 .third__section {
-  margin: 2em 0;
+  margin: 2em 0 4em 0;
   padding: 0.5em;
 }
 @media screen and (min-width: 799px) {
   .third__section {
-    margin: 4em 0 5em 0;
+    margin: 4em 0 6em 0;
     padding-top: 11em;
-    padding-bottom: 4em;
+    padding-bottom: 11em;
     background-image: url("../images/illustration-laptop-desktop.svg");
     background-repeat: no-repeat;
     background-size: 65%;
@@ -503,16 +503,13 @@ img {
 }
 
 footer {
-  padding: 2em 1em 1em 1em;
+  padding: 2em 1em 3.5em 1em;
   background-color: #25252d;
   text-align: center;
-  border-top-right-radius: 20%;
+  border-top-right-radius: 6em;
   color: white;
 }
 @media screen and (min-width: 799px) {
-  footer {
-    border-radius: 0;
-  }
   footer .grid {
     display: grid;
     gap: 5em;
