--- a/time-tracking-dashboard-main/css/style.css
+++ b/time-tracking-dashboard-main/css/style.css
@@ -110,6 +110,7 @@ a{
   
     border-top-left-radius:1em;
     border-top-right-radius:1em;
+
 }
 
 .work{
@@ -149,6 +150,7 @@ a{
     position: relative;
     top: -10px;
     z-index: 2;
+    overflow: hidden;
 }
 .item__body .row{
     display: flex;
@@ -171,6 +173,20 @@ a{
 .item__body .time p {
     margin-top:1em;
     margin-bottom:0;
+}
+.item__body a{
+    transition:all 250ms ease-in;
+}
+.item__body a:hover{
+    color:#fff;
+
+}
+
+.activity .item__body:hover{
+   cursor: pointer;
+   background-color: var(--DesaturatedBlue);
+   transition:all 250ms ease-in;
+ 
 }
 
 @media (min-width: 768px) and (max-width: 991px) { 
@@ -198,7 +214,8 @@ a{
     .container{
         display:grid;
         grid-template-columns:repeat(4,1fr);
-        grid-gap:1em;
+        grid-row-gap:1em;
+        grid-column-gap:1.5em;
     }
     .activity{
       margin-top:0;
