--- a/time-tracking-dashboard-main/css/style.css
+++ b/time-tracking-dashboard-main/css/style.css
@@ -45,7 +45,7 @@ a{
 .container{
     max-width:1140px;
     width:90%;
-    margin:0em auto;
+    margin:2em auto;
 }
 .item{
     background-color: var(--Darkblue);
@@ -60,14 +60,21 @@ a{
   align-items:center;
   justify-content:space-evenly;
   color: #fff;
+
+}
+
+.user__profile{
+   margin-top:4em;
 }
 .item__header h3{
     font-weight:300;
     font-size:0.9rem;
     line-height:1.4;
+    color: var(--PaleBlue);
 }
 .item__header span {
     font-size:1.7rem;
+    color: #fff;
 }
 .profile__img{
     display:block;
@@ -82,9 +89,12 @@ a{
   justify-content: space-around;
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
-  margin-bottom: 1.1em;
+  margin-bottom: 0em;
   background-color: var(--Darkblue);
 
+}
+.work{
+  margin-top:1em;
 }
 .activity{
    margin-top:1em;  
@@ -107,7 +117,6 @@ a{
     flex-basis:4rem;
     background-repeat: no-repeat;
     background-position:right top;
-  
     border-top-left-radius:1em;
     border-top-right-radius:1em;
 
@@ -189,6 +198,14 @@ a{
  
 }
 
+/* Media queries */
+
+@media (max-width:375px) {
+    .item__header span{
+        font-size:1.5rem;
+    }
+}
+
 @media (min-width: 768px) and (max-width: 991px) { 
    
     .container{
@@ -196,18 +213,19 @@ a{
         grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
         grid-gap:1em;
        
+       
     }
     .user__profile{
         grid-column: 1/3;
+        margin-top:0em;
     }
+    .work{
+        margin-top:0em;
+      }
 }
 
 
 
-
-
-
-/* Media queries */
 @media screen and (min-width:991px) {
   
   
@@ -216,6 +234,8 @@ a{
         grid-template-columns:repeat(4,1fr);
         grid-row-gap:1em;
         grid-column-gap:1.5em;
+        margin:0em auto;
+        
     }
     .activity{
       margin-top:0;
@@ -224,8 +244,9 @@ a{
     .user__profile{
        grid-row:1/3;
        align-self: start;
-       padding-bottom: 2em;
+       padding-bottom: 0.78em;
        grid-column: unset;
+       margin-top:0em;
    
     }
 
@@ -247,11 +268,20 @@ a{
         padding-left:2em;
         padding-right:2em;
     }
+    .work{
+        margin-top:0em;
+      }
 
     .time{
        flex-direction: column;
        align-items: flex-start !important;
        text-align: start !important;
+
+      
+    }
+    .user__profile .time{
+        font-size:20px;
+       
     }
     .item__body .time h3{
         font-size:4rem;
@@ -263,8 +293,9 @@ a{
     }
 
     .user__info h3 span{    
-        margin-top:1em;
+        margin-top:0.1em;
         font-size:3rem;
+        display:inline-block;
     }
 
       .profile__img{
